    [+] Added IFactoryProvider::tagCategoryMap().
    [+] Added QtilitiesProcess::newStandardOutputMessage() and QtilitiesProcesss:newStandardErrorMessage().
    [+] Added QtilitiesFileInfo::updateRelativeToPath().
    [+] Added == and != overloads to QtilitiesFileInfo.
    [+] Added Task::setLastRunTime().
    [+] Added new class: FileSetInfo.
    [+] Added FileUtils::toNativeSeparators().

    [#] IFactoryProvider::providedFactoryTags() got a new OK parameter.
    [#] Renamed FileUtils::textFileHashCode() to FileUtils::fileHashCode() since it can now calculate has codes for both text and binary files.
    [#] Replaced FileUtils::compareTextFiles() and FileUtils::compareBinaryFiles() with a single FileUtils::compareFiles() function.
    [#] QtilitiesProcess's constructor got a new read_process_buffers parameter.
    [#] All functions on QtilitiesFileInfo are now available under linux as well.
    [#] QtilitiesProcess will no longer try to execute processes for which the executable does not exist.
    [#] Observer::accessMode() optimized which results in significant increases in tree building.
    [#] Task::setParentTask() does not allow you to set itself as a parent anymore.

    [*] Fixed some places in FileUtils where files were not closed properly.
    [*] Fixed bug in QtilitiesProperty constructor where it did not set the property name correctly when specified, resulting
        in isValid() returning false for valid properties.
    [*] Fixed bug in QtilitiesApplication::applicationSessionPath() where it messed up the QDesktopServices::DataLocation path which should be used by default.

    ============================
    QtilitiesCoreGui:
    ============================
    [+] You can now specify which widget logger engine message displays must be used by TaskManagerGui when assigning logger engines to tasks.